# a2d-shells

./: .gitignore  A2D_SHELLS.mk  CMakeLists.txt  Makefile  Makefile.in.info  README.md  SS_GPU.mk
archive/dynamics/: Makefile
archive/functions/: Makefile
cmake/: A2D_SHELLSConfig.cmake.in  utils.cmake
examples/: .gitignore  runs.sh
examples/a2d-demo/: Makefile  mya2d.cpp
examples/cylinder-buckling/: Makefile  mech-cylinder.bdf  mechBuckling.cpp  therm-cylinder.bdf  thermBuckling.cpp
examples/cylinder-buckling/_static/: .gitignore
examples/mech-cylinder-include/: createCylinderDispControl.h  getKDF.h
examples/mech-cylinder-include/archive/: getKDF_v1.h  getKDF_v2.h  getKDF_v3.h
examples/mech-lbuckle/: Makefile  createCylinder.h  mechBuckling.cpp
examples/mech-lstatic/: Makefile  mechLinStatic.cpp
examples/mech-nlbuckle-debug/: README.md  mechNLBuckling.cpp
examples/mech-nlbuckle-verify/: mechNLBuckling.cpp
examples/mech-nlbuckling/: Makefile  mechNLBuckling.cpp
examples/mech-nlbuckling-KDF-study/: mechNLBuckling.cpp
examples/mech-nlbuckling-auto/: _plot_load_disp.py  mechNLBuckling.cpp
examples/mech-nlstatic/: createCylinder.h  mechNLstatic.cpp
examples/mech-nlstatic-disp-control/: mechNLstatic.cpp
examples/mech-nlstatic/archive/: createCylinderLoadControl.h  mechNLstatic_disp.cpp
examples/mech2-lbuckle/: mechBuckling.cpp
examples/mech3-nlstatic-load-control/: Makefile  mechNLstatic.cpp
examples/mech4-nlstatic-disp-control/: mechNLstatic.cpp
examples/mech5-nlbuckling-manual/: mechNLBuckling.cpp
examples/mech6-nlbuckling-auto/: Makefile  _plot_load_disp.py  mechNLBuckling.cpp
examples/mech7-nlbuckling-KDF-study/: README.md  getKDF.h  mechNLBuckling.cpp
examples/nonlinear-spring/: nl-spring.py
examples/therm-buckling-cylinder/: Makefile  cylinder.bdf  therm-buckling.cpp  thermBuckling.cpp
examples/therm-cylinder-include/: createCylinderDispControl.h  getKDF.h
examples/therm-lbuckle/: thermBuckling.cpp
examples/therm1-lstatic/: Makefile  thermLinStatic.cpp
examples/therm2-lbuckle-caps/: Makefile  thermBuckling.cpp
examples/therm3-lbuckle/: Makefile  thermLinBuckle.cpp  thermNLStatic.cpp
examples/therm4-nlstatci/: Makefile
examples/therm5-nlbuckling/: Makefile  _plot_load_disp.py  thermNLBuckling.cpp  thermNLStatic.cpp
examples/therm6-nlbuckling-KDF-study/: Makefile  getKDF.h  thermNLBuckling.cpp
examples/uCRM/: .gitignore  LoadMesh.cpp  Makefile  RunCRM.cpp  RunCRM_orig.cpp
examples/uCRM/archive/: LoadMesh.cpp  Makefile
include/: TACSObject.h
src/: LoadMesh.cpp  Makefile  TACSAssembler.cpp  TACSAssembler.h  TACSAssembler_thread.cpp  TACSBuckling.cpp  TACSBuckling.h  TACSContinuation.cpp  TACSContinuation.h  TACSObject.cpp  TACSObject.h
src/bpmat/: GSEP.cpp  Makefile  TACSBVec.cpp  TACSBVec.h
src/constitutive/: Makefile  TACSConstitutive.cpp  TACSConstitutive.h  TACSIsoShellConstitutive.cpp  TACSIsoShellConstitutive.h  TACSMaterialProperties.cpp  TACSShellConstitutive.h
src/elements/: Makefile  TACSElement.cpp  TACSElement.h  TACSElementBasis.cpp  TACSElementBasis.h
src/io/: Makefile  TACSMeshLoader.cpp  TACSMeshLoader.h
src/utils/: Makefile
tests/element_tests/: Makefile  make_element.cpp  make_shell_element.cpp
(+26 files in other folders)
